# DRP

./: CONTRIBUTING.md  README.md  drp_cli.py  linter.py  pyproject.toml  setup.py
.github/workflows/: drp_validate.yml
docs/: AUDITABILITY_SCORING.md  COMPARISON_ADR.md  GRANT_EVIDENCE.md  WHY_DRP.md
kernel/: __init__.py  neural_core.py
tests/: test_drp_cli_linter.py  test_neural_core.py
tools/: __init__.py
